fixing gaps and space variables

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     --brown-800: hsl(14, 45%, 36%);
     --rose-800: hsl(332, 51%, 32%);
     --rose-50: hsl(330, 100%, 98%);
-    --small-space: 15px;
+    --small-space: 10px;
     --medium-space: 25px;
     --large-space: 35px;
     font-size: 16px;
@@ -59,7 +59,7 @@ body {
 
 .recipe-card .main-intro h1 {
     font-family: 'Young Serif', serif;
-    font-size: 2.7rem;
+    font-size: 2.5rem;
     font-weight: 400;
 }
 
@@ -69,7 +69,7 @@ body {
 
 .recipe-card .preparation-note {
     background-color: var(--rose-50);
-    padding: 30px;
+    padding: 40px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
